--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@capacitor/status-bar": "^4.0.0",
     "@ionic/react": "^7.0.1",
     "@ionic/react-router": "^7.0.1",
+    "@ionic/storage": "^4.0.0",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.15",
     "@types/react": "^18.0.17",
