--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
 	"appId": "com.example.app",
-	"appName": "nextjs-tailwind-capacitor",
+	"appName": "qr-custom-shop",
 	"bundledWebRuntime": false,
 	"npmClient": "npm",
 	"webDir": "out",
