--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-tailwind-capacitor",
+  "name": "qr-custom-shop",
   "version": "0.1.0",
   "private": true,
   "engines": {
@@ -12,10 +12,11 @@
     "export": "next export"
   },
   "dependencies": {
-    "@capacitor/android": "^4.0.0",
-    "@capacitor/core": "^4.0.0",
-    "@capacitor/ios": "^4.0.0",
-    "@capacitor/status-bar": "^4.0.0",
+    "@capacitor-mlkit/barcode-scanning": "^5.3.0",
+    "@capacitor/android": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/ios": "^5.0.0",
+    "@capacitor/status-bar": "^5.0.0",
     "@ionic/react": "^7.0.1",
     "@ionic/react-router": "^7.0.1",
     "@ionic/storage": "^4.0.0",
@@ -34,7 +35,7 @@
     "react-virtuoso": "^1.1.1"
   },
   "devDependencies": {
-    "@capacitor/cli": "^4.0.0",
+    "@capacitor/cli": "^5.0.0",
     "autoprefixer": "^10.4.12",
     "eslint": "^7.28.0",
     "eslint-config-next": "^13.2.4",
