--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@capacitor-mlkit/barcode-scanning": "^5.3.0",
     "@capacitor/android": "^5.0.0",
+    "@capacitor/app": "^5.0.6",
     "@capacitor/core": "^5.0.0",
     "@capacitor/ios": "^5.0.0",
     "@capacitor/status-bar": "^5.0.0",
