--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "react-virtuoso": "^1.1.1",
-    "sharp": "^0.33.1"
+    "sharp": "0.32.6"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.0.0",
